# patients

./: Dockerfile  README.md  pyproject.toml
sfn/: appointment_request.json
src/app/: main.py
src/lib/: dynamo.py
src/models/: appointment.py  health.py
src/routes/: get_availability.py  health.py  post_provider_availability.py  post_reserve_appointment.py  put_appointment_status.py
src/scripts/: adjust_availability.py
