[tool.poetry]
name = "appointments-api"
version = "0.1.0"
description = ""
authors = []
packages = [{ include = "./src/app" }]


[tool.poetry.dependencies]
python = "^3.11"
mangum = "^0.15.1"
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.19.0" }
flake8 = "^7.0.0"
autoflake = "^2.3.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-helpers-namespace = "^2021.12.29"
coverage = "^6.5.0"
mock = "^4.0.3"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"
pytest-freezegun = "^0.4.2"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = false
source = ["src"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
